# OpenReader

./: .gitignore  How to use GitHub project.txt  README.md  Roadmap.md  cpp-template.yaml  note_lob.txt  pictures.tar
Analysis_with_convol/: ConvolIm.m  GetProfileROIFit2_25_forv2 - TO MODIFY.m  GetProfileROIFit2_25_forv2.m  GetProfileROIFit2_25_forv2_REFERENCE.m  GetProfileROIFit2_25_forv2_TO_MODIFY.asv  GetProfileROIFit2_25_forv2_TO_MODIFY.m
Analysis_with_convol/Pictures/: AnalysisResults01_RGB.txt
CleaningTheCode/: ListOfDuplicates.docx  ~$stOfDuplicates.docx
DependenciesList/: emerge-file_result_dependency_graph.dot  emerge-file_result_dependency_graph.graphml  emerge-filesystem_graph.dot  emerge-filesystem_graph.graphml  emerge-statistics-and-metrics.json  emerge-statistics-metrics.txt
HardwareDocs/: EXPLICATIONS LECTEUR V3 THIBAUT 21.07.2022.docx
Lecteur/: 2021.may to august Memo Tconf.doc  Changes Reader 3.1.docx  LMX3 PCBAs.docx  List of changes for rev. b.md  Message Mario logiciels.docx  Réponses Mario et Thibaut aux questions pilotage de caméra_13.07.2022.docx  ~$anges Reader 3.1.docx  ~$ssage Mario logiciels.docx
Lecteur/lightningdiags-master/: app.json  rest-client.http
Lecteur/pica-master/: CMakeCache.txt
Lecteur/pica-master/tests/: CMakeCache.txt  CMakeLists.txt  TestTools.cpp
Lecteur/pica-master/tests/common/imageProcessing/: TestRemoveLinesOnProfile.cpp
Lecteur/pica-master/tests/monoplex/algos/: TestAlgoExponantialFit.cpp  TestProxNoise.cpp  TestTestMinusProxNoise.cpp
Lecteur/pica-master/tests/multiplex/pattern/resources/: DataToTest.h  pattern.txt
Lecteur/pica-master_Copy/: main_compileData.cpp  main_massTest.cpp
Lecteur/solarium-master/: CMakeLists.txt  GitVersion.h  SolariumApp.cpp  SolariumApp.h  configure.h.in  main.cpp
Lecteur/solarium-master/cmake/: GitVersion.cmake
Lecteur/solarium-master/device/: DeviceInfoFormatter.cpp  DeviceInfoFormatter.h  IBattery.h  IPeripheralStatus.cpp  IPeripheralStatus.h  SolariumDevice.cpp  SolariumDevice.h
Lecteur/solarium-master/device/dummyDevice/: DummyBattery.cpp  DummyCamera.cpp  DummyLed.cpp  DummyLed.h  DummyLightSensor.cpp  DummyLightSensor.h  DummyOutput.h  DummyTemperatureSensor.cpp  DummyTemperatureSensor.h
Lecteur/solarium-master/device/hal/: BatteryWrapper.cpp  BatteryWrapper.h  CameraWrapper.h  LedWrapper.cpp  LedWrapper.h  TemperatureSensorWrapper.cpp
Lecteur/solarium-master/device/peripherals/: charger.cpp  charger.h  gpio_instance.h  light_sensor.cpp  light_sensor.h  temp_sensor.h
Lecteur/solarium-master/device/peripherals-lmx3/: Lmx3Battery.cpp  Lmx3LightSensor.cpp  Lmx3TemperatureSensor.h  Lumedix-drivers-Test.cpp  i2c_drv.cpp  imx8_defs.h  lp5562_drv.cpp  psy_drv.cpp  thm_drv.cpp  uvs_drv.cpp
Lecteur/solarium-master/device/peripherals-lmx3/inc/: i2c_drv.h  thm_drv.h
Lecteur/solarium-master/device/ueye/: UEyeCamera.cpp  UEyeCamera.h  UEyeCameraParams.cpp  UEyeCameraParams.h
Lecteur/solarium-master/device/v4l2camera/: V4L2Camera.cpp  V4L2Camera.h
Lecteur/solarium-master/httpServer/: HTTPDefaultRoute.h  HTTPMeasureCalibration.cpp  HTTPMeasureCalibration.h  HTTPNotFound.cpp  HTTPParamsFinder.cpp  HTTPReports.cpp  HTTPReports.h  HTTPRouteBrowseAnalysis.cpp  HTTPRouteBrowsePatient.h  HTTPRouteInfo.cpp  HTTPRouteLeds.cpp  HTTPRouteLeds.h  HTTPRouteSnapshot.cpp  HTTPRouteSnapshot.h  HTTPRouteStudyComments.cpp  HTTPRouteStudyComments.h  HTTPRouteStudySequence.h  HTTPRouteTakeMeasure.cpp  HTTPRouting.cpp  HTTPTools.cpp
Lecteur/solarium-master/measures/: AnalysisResult.cpp  AnalysisResult.h  CalibrationResult.cpp  CalibrationResult.h  MeasureConfig.h  MeasuresManager.h  ParamsFinder (autre copie).cpp  PatientInfo.h  StripAnalysis.cpp  StudySnapshotResult.h
Lecteur/solarium-master/models/: LEDParams.h  LensFocal.h  SpaceInfo.h
Lecteur/solarium-master/reports/: Reports.h
Lecteur/solarium-master/repository/: AnalysisRepository.cpp  IRepository.cpp  IRepository.h  ReaderDB.cpp  ReaderDB.h
Lecteur/solarium-master/tests/: CMakeLists.txt  ImgToolsTests.cpp  LEDParamsTest.cpp  ParamsFinderTests.cpp  TestTools.cpp  TestTools.h  main_tests.cpp
Lecteur/solarium-master/tools/: Converter.h  DebugInfo.h  Exception.h  FSTools.cpp  ImgTools.cpp  logging.cpp  simple_logging.h  sync_stream.cpp  sync_stream.h
Lecteur/solarium-workbench-master/: package-lock.json  package.json  webpack.config.js
Lecteur/strips-analyzer-master/: AnalysisLoopMultiplexSummary.xlsx  AnalysisLoopSummary.xlsx  AnalysisResults_ModelFileMultiplex.xlsx  AnalysisResults_ModelFileSandwich_v4.xlsx  BinImage.m  Config devices.xlsx  computePicaAnalysis.m  computeProfilWithPadding.m  concentrationCalibration_v4.m  createConcentrationList_v4.m  createMultiplexLoopSummary.m  determineDeviceInformations.m  dialogbox_v4.m  findControlLine_calibParams.m  graphicInterfaceMultiplexLooper.m  graphicInterface_v4_Windows.m  loopParamDialog.m  mergeProfilesIntoGraph.m  mergeRawImageProfiles.m  (+7 more)
LumendiX_Minutes/: Mail a ELP.docx  Status of 5 first protos V3.xlsx
Pictures/: AnalysisResults01_RGB.txt
Presentation/: OpenReader presentation.pptx
Reader/pica-master_Copy/: CMakeLists.txt  main_analyzeMultiplex.cpp  main_analyzeUseTest.cpp  main_matlab.cpp
Reader/pica-master_Copy/common/cropper/: CassetteType.cpp  CassetteType.h
Reader/pica-master_Copy/monoplex/algos/: AlgoExponantialFit.h  AlgoPoly2.cpp  AlgoProxNoise.cpp  AlgoTestMinusProxNoise.cpp  AlgoTestMinusProxNoise.h
Reader/pica-master_Copy/monoplex/useTestAnalyzer/: AnalyzeUseTestStructs.h  ROCCurveManager.h
Reader/pica-master_Copy/multiplex/algos/: AlgoMultiplexConvolBrut.cpp
Reader/pica-master_Copy/multiplex/pattern/: MultiplexStructs.h
Reader/pica-master_Copy/multiplex/useTestAnalyzer/: ExcelWriter.cpp  ExcelWriter.h
Reader/pica-master_Copy/tests/common/fileProcessing/: TestParser.cpp
Reader/pica-master_Copy/tests/common/imageProcessing/: TestFindControlLine.cpp
Reader/pica-master_Copy/tests/monoplex/algos/: TestAlgoPoly2.cpp
Reader/pica-master_Copy/tests/multiplex/pattern/: TestPatternManager.cpp
solarium-workbench-master/: README.md
(+245 files in other folders)
